--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@next/eslint-plugin-next": "^14.2.3",
+    "@plaiceholder/next": "^3.0.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
@@ -24,6 +26,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
+    "critters": "^0.0.24",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
