--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -14,6 +15,7 @@
 
 # production
 /build
+/public/upload
 
 # misc
 .DS_Store
@@ -25,10 +27,18 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+
+.env
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
