--- a/packages/config-tailwind/package.json
+++ b/packages/config-tailwind/package.json
@@ -7,6 +7,12 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "^20.11.24",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "mini-svg-data-uri": "^1.4.4",
+    "tailwindcss-3d": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
