--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["agrandir", "ducanh", "Plaiceholder"]
+  "cSpell.words": ["agrandir", "biomejs", "ducanh", "Plaiceholder"]
 }
