--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "e2e": "pnpm create playwright",
+    "e2e:ui": "pnpm exec playwright test --ui"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
@@ -17,9 +19,8 @@
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@next/eslint-plugin-next": "^14.2.3",
     "@plaiceholder/next": "^3.0.0",
-    "@repo/eslint-config": "workspace:*",
+    "@playwright/test": "^1.45.1",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
