--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,28 +1,17 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "sideEffects": [
-    "**/*.css"
-  ],
-  "files": [
-    "dist"
-  ],
+  "sideEffects": ["**/*.css"],
+  "files": ["dist"],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./components/*": [
-      "./src/components/*.ts",
-      "./src/components/*.tsx"
-    ],
-    "./*": [
-      "./src/ui/*.ts",
-      "./src/ui/*.tsx"
-    ],
+    "./components/*": ["./src/components/*.ts", "./src/components/*.tsx"],
+    "./*": ["./src/ui/*.ts", "./src/ui/*.tsx"],
     "./src/lib/utils": "./src/lib/utils.ts"
   },
   "license": "MIT",
   "scripts": {
     "build": "tailwindcss -i ./src/css/styles.css -o ./dist/index.css",
-    "lint": "eslint src/",
     "dev": "tailwindcss -i ./src/css/styles.css -o ./dist/index.css --watch",
     "type-check": "tsc --noEmit"
   },
@@ -30,7 +19,6 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/react": "^18.2.61",
