--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
     "e2e:ui": "pnpm exec playwright test --ui"
   },
   "dependencies": {
+    "@repo/cms": "workspace:*",
+    "@repo/lib": "workspace:*",
     "@repo/ui": "workspace:*",
+    "glob": "^11.0.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,9 +22,9 @@
     "@ducanh2912/next-pwa": "^10.2.7",
     "@plaiceholder/next": "^3.0.0",
     "@playwright/test": "^1.45.1",
+    "@repo/lib": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/lib": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
