--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,13 @@
     "biomejs",
     "cdta",
     "cmdk",
+    "dotenvx",
     "ducanh",
     "fmap",
     "Millis",
     "nextjs",
+    "oracledb",
+    "PGADMIN",
     "Plaiceholder",
     "Sonner",
     "Stringable",
