--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,20 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "env": [
+        "BASE_URL",
+        "POSTGRES_DATABASE",
+        "POSTGRES_HOST",
+        "POSTGRES_IDLE_TIMEOUT",
+        "POSTGRES_MAX_CONNECTIONS",
+        "POSTGRES_MAX_LIFETIME",
+        "POSTGRES_PASSWORD",
+        "POSTGRES_PORT",
+        "POSTGRES_USER",
+        "PGADMIN_DEFAULT_EMAIL",
+        "PGADMIN_DEFAULT_PASSWORD"
+      ]
     },
     "lint": {},
     "lint:fix": {
@@ -13,7 +26,20 @@
     "type-check": {},
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": [
+        "BASE_URL",
+        "POSTGRES_DATABASE",
+        "POSTGRES_HOST",
+        "POSTGRES_IDLE_TIMEOUT",
+        "POSTGRES_MAX_CONNECTIONS",
+        "POSTGRES_MAX_LIFETIME",
+        "POSTGRES_PASSWORD",
+        "POSTGRES_PORT",
+        "POSTGRES_USER",
+        "PGADMIN_DEFAULT_EMAIL",
+        "PGADMIN_DEFAULT_PASSWORD"
+      ]
     },
     "clean": {
       "cache": false
