--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -34,7 +35,7 @@ yarn-error.log*
 
 # ui
 dist/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+test-results
+playwright-report
+blob-report
+playwright/.cache
