--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -1,10 +1,5 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
   "include": ["."],
-  "exclude": ["dist", "build", "node_modules"],
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+  "exclude": ["dist", "build", "node_modules"]
 }
