--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,9 @@
       "./src/ui/*.ts",
       "./src/ui/*.tsx",
       "./src/components/*.ts",
-      "./src/components/*.tsx"
+      "./src/components/*.tsx",
+      "./src/hooks/*.ts",
+      "./src/hooks/*.tsx"
     ],
     "./cn": "./src/lib/utils.ts"
   },
@@ -37,6 +39,7 @@
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -55,6 +58,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.10.0",
@@ -70,6 +74,7 @@
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.10.1",
+    "react-scroll": "^1.9.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "vaul": "^0.9.1"
