--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@repo/cms": "workspace:*",
+    "@repo/config": "workspace:*",
     "@repo/lib": "workspace:*",
     "@repo/ui": "workspace:*",
     "glob": "^11.0.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/config": "workspace:*"
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
