--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "biomejs",
     "cdta",
     "cmdk",
+    "codegen",
     "dotenvx",
     "ducanh",
     "fmap",
@@ -19,6 +20,9 @@
     "Plaiceholder",
     "Sonner",
     "Stringable",
+    "Tanstack",
+    "testid",
+    "textbox",
     "tsparticles",
     "ufunc",
     "Unminified",
