--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "e2e": "pnpm create playwright",
-    "e2e:ui": "pnpm exec playwright test --ui"
+    "e2e:ui": "pnpm exec playwright test --ui",
+    "e2e:codegen": "pnpx playwright codegen"
   },
   "dependencies": {
     "@repo/cms": "workspace:*",
