--- a/packages/cms-ui/package.json
+++ b/packages/cms-ui/package.json
@@ -1,14 +1,33 @@
 {
   "name": "@repo/cms-ui",
   "version": "0.0.0",
-  "sideEffects": ["**/*.css"],
-  "files": ["dist"],
+  "sideEffects": [
+    "**/*.css"
+  ],
+  "files": [
+    "dist"
+  ],
   "exports": {
-    "./*": ["./src/*.ts", "./src/*.tsx"],
-    "./collections": ["./src/*.ts", "./src/*.tsx"],
-    "./documents": ["./src/*.ts", "./src/*.tsx"],
-    "./fields": ["./src/*.ts", "./src/*.tsx"],
-    "./ui": ["./src/*.ts", "./src/*.tsx"]
+    "./*": [
+      "./src/*.ts",
+      "./src/*.tsx"
+    ],
+    "./collections": [
+      "./src/*.ts",
+      "./src/*.tsx"
+    ],
+    "./documents": [
+      "./src/*.ts",
+      "./src/*.tsx"
+    ],
+    "./fields": [
+      "./src/*.ts",
+      "./src/*.tsx"
+    ],
+    "./ui": [
+      "./src/*.ts",
+      "./src/*.tsx"
+    ]
   },
   "license": "MIT",
   "devDependencies": {
@@ -17,6 +36,7 @@
     "@repo/lib": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "^18.2.61",
     "typescript": "^5.3.3"
   },
