--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,20 +6,26 @@
   ],
   "cSpell.words": [
     "agrandir",
+    "asteasolutions",
     "biomejs",
     "cdta",
     "cmdk",
     "codegen",
     "dotenvx",
     "ducanh",
+    "elems",
     "fmap",
     "Millis",
     "nextjs",
+    "officedocument",
+    "openapi",
+    "openxmlformats",
     "oracledb",
     "pacman",
     "PGADMIN",
     "Plaiceholder",
     "Sonner",
+    "spreadsheetml",
     "Stringable",
     "Tanstack",
     "testid",
