--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "e2e:create": "pnpm create playwright",
     "e2e:ui": "pnpm exec playwright test --ui",
-    "e2e:codegen": "pnpx playwright codegen"
+    "e2e:codegen": "pnpx playwright codegen",
+    "dr:build": "npx declarative-routing build",
+    "dr:build:watch": "npx declarative-routing build --watch",
+    "openapi": "npm run openapi:yaml && npm run openapi:html",
+    "openapi:yaml": "ts-node ./src/routes/openapi.ts",
+    "openapi:html": "npx @redocly/cli build-docs openapi-docs.yml"
   },
   "dependencies": {
     "@repo/cms": "workspace:*",
@@ -16,13 +21,17 @@
     "@repo/config": "workspace:*",
     "@repo/lib": "workspace:*",
     "@repo/ui": "workspace:*",
+    "declarative-routing": "^0.1.20",
     "glob": "^11.0.0",
     "next": "^14.2.3",
+    "query-string": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.1.1",
     "@ducanh2912/next-pwa": "^10.2.7",
     "@plaiceholder/next": "^3.0.0",
     "@playwright/test": "^1.45.1",
@@ -36,6 +45,7 @@
     "critters": "^0.0.24",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yaml": "^2.5.1"
   }
 }
