--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,12 +25,14 @@
     "PGADMIN",
     "Plaiceholder",
     "Sonner",
+    "spinbutton",
     "spreadsheetml",
     "Stringable",
     "Tanstack",
     "testid",
     "textbox",
     "tsparticles",
+    "udecode",
     "ufunc",
     "Unminified",
     "vaul",
