--- a/packages/cms-ui/package.json
+++ b/packages/cms-ui/package.json
@@ -1,56 +1,51 @@
 {
   "name": "@repo/cms-ui",
   "version": "0.0.0",
-  "sideEffects": [
-    "**/*.css"
-  ],
-  "files": [
-    "dist"
-  ],
+  "sideEffects": ["**/*.css"],
+  "files": ["dist"],
   "exports": {
-    "./*": [
-      "./src/*.ts",
-      "./src/*.tsx"
-    ],
-    "./collections": [
-      "./src/*.ts",
-      "./src/*.tsx"
-    ],
-    "./documents": [
-      "./src/*.ts",
-      "./src/*.tsx"
-    ],
-    "./fields": [
-      "./src/*.ts",
-      "./src/*.tsx"
-    ],
-    "./ui": [
-      "./src/*.ts",
-      "./src/*.tsx"
-    ]
+    "./styles.css": "./dist/index.css",
+    "./*": ["./src/*.ts", "./src/*.tsx"],
+    "./collections": ["./src/*.ts", "./src/*.tsx"],
+    "./documents": ["./src/*.ts", "./src/*.tsx"],
+    "./fields": ["./src/*.ts", "./src/*.tsx"],
+    "./ui": ["./src/*.ts", "./src/*.tsx"]
   },
   "license": "MIT",
+  "scripts": {
+    "build": "tailwindcss -i ./src/css/styles.css -o ./dist/index.css",
+    "dev": "tailwindcss -i ./src/css/styles.css -o ./dist/index.css --watch"
+  },
   "devDependencies": {
     "@repo/config": "workspace:*",
     "@repo/jest-config": "workspace:*",
     "@repo/lib": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.2.61",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.0",
     "@repo/cms": "workspace:*",
     "@tanstack/react-table": "^8.19.3",
+    "@udecode/plate-common": "^39.1.3",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dropzone": "^14.2.9",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
+    "use-debounce": "^10.0.3",
     "zod": "^3.23.8"
   }
 }
