--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,10 +23,10 @@
     "@repo/ui": "workspace:*",
     "declarative-routing": "^0.1.20",
     "glob": "^11.0.0",
-    "next": "^14.2.3",
+    "next": "15.0.1",
     "query-string": "^9.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
@@ -39,8 +39,8 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.18",
     "critters": "^0.0.24",
     "postcss": "^8.4.35",
