--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -15,6 +15,9 @@
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch --detectOpenHandles"
   },
+  "peerDependencies": {
+    "react": "19.0.0-rc-69d4b800-20241021"
+  },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@repo/config": "workspace:*",
@@ -22,7 +25,7 @@
     "@repo/lib": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
-    "@types/react": "^18.2.61",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -31,7 +34,6 @@
     "knex": "^3.1.0",
     "lucide-react": "^0.408.0",
     "next": "^14.2.3",
-    "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "server-only": "^0.0.1",
